--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-Revision history for CIDR-Lookup
+Revision history for Net::CIDR::Lookup
 
 0.3     Thu Oct 30 13:12:08 CET 2008
         First version released to CPAN
