--- a/README
+++ b/README
@@ -1,8 +1,9 @@
 Net-CIDR-Lookup
 
-This module provides a pure-Perl implementation of a tree of netblocks. It
-installs like most other modules (see generic instructions below) and depends
-only on Test::Class for the unit tests (which you can skip if you like).
+This module provides a pure-Perl implementation of a lookup table based on CIDR
+net blocks. It installs like most other modules (see generic instructions below)
+and depends only on Test::Class for the unit tests (which you can skip if you
+like).
 
 
 INSTALLATION
@@ -38,7 +39,7 @@ You can also look for information at:
 
 COPYRIGHT AND LICENCE
 
-Copyright (C) 2008 Matthias Bethke
+Copyright (C) 2008, 2012 Matthias Bethke <matthias@towiski.de>
 
 This program is free software; you can redistribute it and/or modify it
 under the same terms as Perl itself.
