--- a/lib/Net/CIDR/Lookup/IPv6/Changes.pod
+++ b/lib/Net/CIDR/Lookup/IPv6/Changes.pod
@@ -2,6 +2,16 @@
 
 =over 1
 
+=item V0.51
+
+=over 1
+
+=item * Fixed C<to_hash()> that the change to iterative tree walking had broken. Same bug as in IPv4 version.
+
+=item * Changed address parsing from C<getaddrinfo()> to the simpler C<inet_pton()>. This should also fix the problems on some systems (mostly BSDs and Solaris) where passing a zero port number caused the call to fail.
+
+=back
+
 =item V0.5
 
 =over 1
