Import of MBETHKE/Net-CIDR-Lookup-0.51_3 from CPAN.
gitpan-cpan-distribution: Net-CIDR-Lookup
gitpan-cpan-version:      0.51_3
gitpan-cpan-path:         MBETHKE/Net-CIDR-Lookup-0.51_3.tar.bz2
gitpan-cpan-author:       MBETHKE
gitpan-cpan-maturity:     developer

--- a/lib/Net/CIDR/Lookup/IPv6/Changes.pod
+++ b/lib/Net/CIDR/Lookup/IPv6/Changes.pod
@@ -6,9 +6,9 @@
 
 =over 1
 
-=item * Fixed C<to_hash()> that the change to iterative tree walking had broken. Same bug as in IPv4 version.
+=item Fixed C<to_hash()> that the change to iterative tree walking had broken. Same bug as in IPv4 version.
 
-=item * Changed address parsing from C<getaddrinfo()> to the simpler C<inet_pton()>. This should also fix the problems on some systems (mostly BSDs and Solaris) where passing a zero port number caused the call to fail.
+=item Changed address parsing from C<getaddrinfo()> to the simpler C<inet_pton()>. This should also fix the problems on some systems (mostly BSDs and Solaris) where passing a zero port number caused the call to fail.
 
 =back
 
@@ -18,12 +18,12 @@
 
 =item B<Attention: Breaking Change!> C<dump> is called more sensibly C<to_hash> now.
 
-=item * Replaced the recursive implementations of C<lookup()> and C<walk()> with
+=item Replaced the recursive implementations of C<lookup()> and C<walk()> with
 iterative ones for about a 30% speed increase.
 
-=item * Fixed C<lookup_vec()>
+=item Fixed C<lookup_vec()>
 
-=item * Moved version history to its own POD file
+=item Moved version history to its own POD file
 
 =back
 
